<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ChatSpots</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_status">Sign Up Successful</string>
    <string name="profile">Login Successful</string>
    <string name="login_error">Login Error</string>
    <string name="sign_up_error">Sign Up Error</string>
    <string name="title_activity_display_message"></string>
    <string name="edit_profile"></string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="gender">m/f</string>
    <string name="bdate">Birth Date</string>
    <string name="msisdn">200000000000</string>
    <string name="toast_noGps">Would you like to enable the GPS to get your location more precisely ?</string>
    <string name="toast_noGps_noNet">GPS and wireless network are disabled. TURN ON any to locate you</string>
    <string name="toast_disabled">"GPS and wireless Disabled, Trying to get your latest location saved"</string>
    <string name="exception_gps">GPS is disabled</string>
    <string name="exception_net">No Wireless network</string>
    <string name="toast_getting_oldLoca">"Device can't locate you, Trying to get your latest location saved"</string>
    <string name="toast_location">Getting your Location</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="choose_image_source">Choose the image source</string>
    <string name="error">Error!</string>
    <string name="image_error">Error parsing image!</string>
</resources>