<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1.44"
        android:orientation="vertical" >

       <ImageView
           android:id="@+id/profile_pic"
           android:layout_width="match_parent"
           android:layout_height="80dp"
           android:onClick="chooseImageSource"
           android:src="@drawable/male" />
        
       <TextView
            android:id="@+id/note"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:text="Click on the image to change it"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall" />
       
        <EditText
            android:id="@+id/usermail"
            android:layout_width="254dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
        
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/fname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/fname" />

        <EditText
            android:id="@+id/lname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/lname" />

             <EditText
         android:id="@+id/msisdn"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_weight="1"
         android:hint="@string/msisdn"
         android:inputType="number" >

     </EditText>
        
        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:checked="true"
                android:text="Male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female" />
        </RadioGroup>

        <DatePicker
            android:id="@+id/bdate"
            android:layout_width="278dp"
            android:layout_height="150dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="0.16" />

        <Button
            android:id="@+id/update_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:onClick="update_profile"
            android:text="Save" />

        <TextView
            android:id="@+id/update_profile_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FF0000" />
    </LinearLayout>
    
   </ScrollView>

</LinearLayout>